Disable global verbose

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,9 +2,8 @@ FROM mcr.microsoft.com/powershell:7.0.0-centos-7
 
 ARG ua_version=1.3.1
 
-# Prepare the profile: handle errors, suppress progress bar and show verbose
+# Prepare the profile: handle errors and suppress progress bar
 RUN pwsh -Command "New-Item -Path '/root/.config/powershell' -ItemType 'Directory' | Out-Null"
-RUN pwsh -Command "Add-Content -Path '/root/.config/powershell/profile.ps1' -Value '\$VerbosePreference = ''Continue'''"
 RUN pwsh -Command "Add-Content -Path '/root/.config/powershell/profile.ps1' -Value '\$ProgressPreference = ''SilentlyContinue'''"
 RUN pwsh -Command "Add-Content -Path '/root/.config/powershell/profile.ps1' -Value '\$ErrorActionPreference = ''Stop'''"
 
