Add license environment variables

--- a/windows-ltsc2019/app/.env.example
+++ b/windows-ltsc2019/app/.env.example
@@ -1,3 +1,9 @@
+# Universal Automation license key.
+UA_LICENSE=<License><Terms>ABC..XYZ</Terms><Signature>123..789</Signature></License>
+
+# Unviersal Dashbaord license key.
+UD_LICENSE=<License><Terms>ABC..XYZ</Terms><Signature>123..789</Signature></License>
+
 # Default local administrator login user.
 UA_ADMIN_USERNAME=admin
 
